--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,8 @@
         android:id="@+id/bt_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Push Me!"
+        android:backgroundTint="@color/colorAccent"
+        android:text="@string/txtboton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
